// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-cta/Button renders correctly 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 27,
          "lineHeight": 33,
        },
        Array [
          Object {
            "color": "#FFF",
            "paddingHorizontal": 9,
          },
          undefined,
        ],
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`@npm/mobydick-cta/Button renders correctly 2`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 48,
      "opacity": 1,
      "paddingHorizontal": 18,
      "paddingVertical": 9,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#F54D3D",
          "fontFamily": "Inter-Bold",
          "fontSize": 27,
          "lineHeight": 33,
        },
        Array [
          Object {
            "color": "#FFF",
            "paddingHorizontal": 6,
          },
          undefined,
        ],
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`@npm/mobydick-cta/Button renders correctly destructive 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#F54D3D",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
    }
  }
/>
`;

exports[`@npm/mobydick-cta/Button renders correctly disabled 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#9BA1B0",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
    }
  }
/>
`;

exports[`@npm/mobydick-cta/Button renders correctly fixed 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
    }
  }
/>
`;

exports[`@npm/mobydick-cta/Button renders correctly large 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
      "paddingHorizontal": 18,
      "paddingVertical": 18,
    }
  }
/>
`;

exports[`@npm/mobydick-cta/Button renders correctly left icon size large 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
      "paddingHorizontal": 39,
      "paddingVertical": 18,
    }
  }
>
  <View />
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 27,
          "lineHeight": 33,
        },
        Array [
          Object {
            "color": "#FFF",
            "paddingHorizontal": 9,
          },
          undefined,
        ],
      ]
    }
  >
    text
  </Text>
  <View />
</View>
`;

exports[`@npm/mobydick-cta/Button renders correctly left icon size small 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 48,
      "opacity": 1,
      "paddingHorizontal": 21,
      "paddingVertical": 9,
    }
  }
>
  <View />
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 21,
          "lineHeight": 27,
        },
        Array [
          Object {
            "color": "#FFF",
            "paddingHorizontal": 6,
          },
          undefined,
        ],
      ]
    }
  >
    text
  </Text>
  <View />
</View>
`;

exports[`@npm/mobydick-cta/Button renders correctly left icon small 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 48,
      "opacity": 1,
      "paddingHorizontal": 9,
      "paddingVertical": 9,
    }
  }
>
  <View />
  <View />
</View>
`;

exports[`@npm/mobydick-cta/Button renders correctly loading 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "alignSelf": "center",
        "transform": Array [
          Object {
            "rotate": "0deg",
          },
        ],
      }
    }
  >
    <SvgMock
      fill="#FFF"
      height="24"
      width="24"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-cta/Button renders correctly secondary 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "rgba(43, 120, 238, 0.15)",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
    }
  }
/>
`;

exports[`@npm/mobydick-cta/Button renders correctly small 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 48,
      "opacity": 1,
      "paddingHorizontal": 9,
      "paddingVertical": 9,
    }
  }
/>
`;

exports[`@npm/mobydick-cta/Button renders correctly small 2`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 48,
      "opacity": 1,
      "paddingHorizontal": 9,
      "paddingVertical": 9,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "alignSelf": "center",
        "transform": Array [
          Object {
            "rotate": "0deg",
          },
        ],
      }
    }
  >
    <SvgMock
      fill="#FFF"
      height="20"
      width="20"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-cta/Button renders correctly tertiary 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "transparent",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
    }
  }
/>
`;

exports[`@npm/mobydick-cta/Button renders correctly text 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 48,
      "opacity": 1,
      "paddingHorizontal": 18,
      "paddingVertical": 9,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 21,
          "lineHeight": 27,
        },
        Array [
          Object {
            "color": "#FFF",
            "paddingHorizontal": 6,
          },
          undefined,
        ],
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`@npm/mobydick-cta/Button renders correctly without size 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
    }
  }
/>
`;
